// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation.addMessage should add message to specified chat 1`] = `
Object {
  "addMessage": null,
}
`;

exports[`Mutation.addMessage should add message to specified chat 2`] = `
Object {
  "chat": null,
}
`;
